--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,4 @@
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/payroll_service
 spring.datasource.username=root
-spring.datasource.password=Srinadh
+spring.datasource.password=Perfios@2021
