--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,7 @@
+spring.profiles.active=dev
 
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+environment=COMMON
 spring.datasource.url=jdbc:mysql://localhost:3306/payroll_service
 spring.datasource.username=root
-spring.datasource.password=Perfios@2021
-logging.file.name=application.log
+spring.datasource.password=$rinadh@Perifos9
 
-logging.level.root=WARN
-logging.level.org.springframework.web=WARN
-logging.level.org.hibernate=ERROR
-logging.level.com.bridgelabz=DEBUG
-
-logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss.SSSS} [%level] [%thread] [%logger:%line] %msg%n 
