--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.profiles.active=dev
 
 environment=COMMON
-spring.datasource.url=jdbc:mysql://localhost:3306/payroll_service
-spring.datasource.username=root
-spring.datasource.password=$rinadh@Perifos9
-
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3306/payroll_db
+spring.datasource.username=${PAYROLL_DB_USERNAME:payrolluser}
+spring.datasource.password=${PAYROLL_DB_PASSWORD:$rinadh@Perfios9}
