--- a/pom.xml
+++ b/pom.xml
@@ -9,10 +9,10 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.bridgelabz</groupId>
-	<artifactId>Employee</artifactId>
+	<artifactId>employee</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>Employee</name>
-	<description>Demo project for Spring Boot</description>
+	<name>EmployeePayrollApp</name>
+	<description>Demo project for Employee Payroll</description>
 	<properties>
 		<java.version>11</java.version>
 	</properties>
@@ -46,12 +46,14 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
-			<version>1.18.22</version>
+			<version>1.18.20</version>
 			<scope>provided</scope>
 		</dependency>
+
 	</dependencies>
 
 	<build>
