--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,4 @@ environment=COMMON
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/payroll_db
 spring.datasource.username=${PAYROLL_DB_USERNAME:payrolluser}
-spring.datasource.password=${PAYROLL_DB_PASSWORD:$rinadh@Perfios9}
+spring.datasource.password=${PAYROLL_DB_PASSWORD:Perfios@2021}
